 - CONFIG change: Option in apache configuration must be set:
JkOptions +ForwardURICompatUnparsed
#####################################################
   

* 2007-07-13 - thorben.betten@open-xchange.com

 - Slightly fastened AJP processing
 - Added file name extraction method to UploadEvent
 - Avoiding duplicate VCard attachment when saving draft message

* 2007-07-12 - tobias.prinz@open-xchange.com

 - Bugfix #7732: An RRULE's COUNT property is now set as occurrence value
   for a CalendarObject.

* 2007-07-12 - thorben.betten@open-xchange.com

 - Setting message's 'Organization' header surrounded by a try-catch clause
   in which a Throwable is caught thus sending a message is not aborted
   through a possible error while reading context admin's organization field
 - New method in USerConfiguration to detect if user is allowed to see portal
   page in GUI

* 2007-07-11 - thorben.betten@open-xchange.com

 - Added support for differing IMAP server's ACL handling plus
   auto-detection of IMAP server
 - Added possibility to map more machines to one host name when detecting
   User2IMAP impl
 - Fixed problem if IMAPProperties could not be properly initialized during
   session creation

* 2007-07-10 - tobias.prinz@open-xchange.com

 - Bugfix #7949: Changed log-level for USER_INPUT exceptions 
   from warn() to debug().

* 2007-07-10 - martin.kauss@open-xchange.com

 - Fixed bug #8317. If a whole day appointment exist and a user
   creates an appointment around midnight which should conflict,
   depending of the timezone of the user, no conflict is resolved
   because of a wrong handling. This has been fixed.

* 2007-07-10 - marcus.klein@open-xchange.com

 - Bugfix #7140: Updated servlet API to newest version.
 - Bugfix #8351: Assigned 512MB maximum memory to groupware server.

* 2007-07-10 - thorben.betten@open-xchange.com

 - Bugfix #8316: Preventing the NPE occuring in first stack trace posted in
   bug